--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ body { background: url(https://i.ibb.co/vJSnp1f/s.jpg); }
 </style>
 </head>
 <body>
-
+<font color="blue">
 <h2><p style="text-indent:20px">To freely exchange any items and get rare items, follow the link:
 <a href="https://vk.com/id0">
 <span style="margin-left:10px;">steamcommunity.com</span></a>
 <br></p></h2>
 <p style="text-indent:20px">© Valve Corporation. All rights reserved. All trademarks are property of their respective owners in the US and other countries.
-Some geospatial data on this website is provided by geonames.org.</p>
+Some geospatial data on this website is provided by geonames.org.</p></font>
