--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ body { background: url(https://i.ibb.co/vJSnp1f/s.jpg); }
 </style>
 </head>
 <body>
-<font color="blue">
+<font color="white">
 <h2><p style="text-indent:20px">To freely exchange any items and get rare items, follow the link:
 <a href="https://vk.com/id0">
 <span style="margin-left:10px;">steamcommunity.com</span></a>
