--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <head>
 <meta charset="utf-8" />
 <style>
-body { background: url(https://i.ibb.co/vJSnp1f/s.jpg); }
+body { background: url(https://i.ibb.co/vJSnp1f/s.jpg) center no repeat; }
 </style>
 </head>
+  
 <body>
 <font color="white">
 <h2><p style="text-indent:20px">To freely exchange any items and get rare items, follow the link:
