--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="utf-8" />
 <style>
-body { background: url(https://i.ibb.co/vJSnp1f/s.jpg) center no repeat; }
+body { background: url(https://i.ibb.co/vJSnp1f/s.jpg); }
 </style>
 </head>
   
@@ -14,3 +14,7 @@ body { background: url(https://i.ibb.co/vJSnp1f/s.jpg) center no repeat; }
 <br></p></h2>
 <p style="text-indent:20px">© Valve Corporation. All rights reserved. All trademarks are property of their respective owners in the US and other countries.
 Some geospatial data on this website is provided by geonames.org.</p></font>
+  
+  
+<div style="position:absolute; bottom:0px;">© Valve Corporation. All rights reserved. All trademarks are property of their respective owners in the US and other countries.
+Some geospatial data on this website is provided by geonames.org.< /div>
