--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@ body { background: url(https://i.ibb.co/vJSnp1f/s.jpg); }
 <span style="margin-left:10px;">steamcommunity.com</span></a>
 <br></p></h2>
 <p style="text-indent:20px">© Valve Corporation. All rights reserved. All trademarks are property of their respective owners in the US and other countries.
-Some geospatial data on this website is provided by geonames.org.</p></font>
-  
-  
+Some geospatial data on this website is provided by geonames.org.</p>
+
 <div style="position:absolute; bottom:0px;">© Valve Corporation. All rights reserved. All trademarks are property of their respective owners in the US and other countries.
-Some geospatial data on this website is provided by geonames.org.< /div>
+Some geospatial data on this website is provided by geonames.org.</div></font>
