--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html lang="ru">
 <head>
-<meta charset="utf-8" />
-<style>
-body { background: url(https://i.ibb.co/vJSnp1f/s.jpg); }
-</style>
+  height: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  background: url(https://i.ibb.co/vJSnp1f/s.jpg) center no-repeat;
+  background-size: 100% 100%;
 </head>
   
 <body>
