--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   height: 100%;
   box-sizing: border-box;
   margin: 0;
-  background: url(https://i.ibb.co/vJSnp1f/s.jpg) center no-repeat;
+  background: url(https://i.ibb.co/vJSnp1f/s.jpg);
   background-size: 100% 100%;
 </head>
   
