--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html lang="ru">
 <head>
-  height: 100%;
-  box-sizing: border-box;
-  margin: 0;
-  background: url(https://i.ibb.co/vJSnp1f/s.jpg);
-  background-size: 100% 100%;
+ <meta charset="utf-8" />
+<style>
+body { background: url(https://i.ibb.co/vJSnp1f/s.jpg); }
+</style>
 </head>
   
 <body>
