--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <head>
  <meta charset="utf-8" />
 <style>
-body { background: url(https://i.ibb.co/vJSnp1f/s.jpg); }
+body { background-image: url(https://i.ibb.co/vJSnp1f/s.jpg); background-size: 100%; }
+ 
 </style>
 </head>
   
