--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ body { background-image: url(https://i.ibb.co/NVn88f1/sss.jpg); background-size:
 <h2><p style="text-indent:20px">To freely exchange any items and get rare items, follow the link:
 <a href="https://vk.com/id0">
 <span style="margin-left:10px;">steamcommunity.com</span></a>
-<br></p></h2>
-
+<br></p></h2></font>
+ 
+ <font color="grey">
 <div style="position:absolute; bottom:0px;">© Valve Corporation. All rights reserved. All trademarks are property of their respective owners in the US and other countries.
 Some geospatial data on this website is provided by geonames.org.</div></font>
