--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body { background-image: url(https://i.ibb.co/NVn88f1/sss.jpg); background-size:
 <body>
 <font color="white">
 <h2><p style="text-indent:20px">To freely exchange any items and get rare items, follow the link:
-<a href="https://vk.com/id0">
+<a href="https://vk.com/vkandreyt">
 <span style="margin-left:10px;">steamcommunity.com</span></a>
 <br></p></h2></font>
  
